--- a/Conways_GameOfLife/UserControls/GameCell.xaml
+++ b/Conways_GameOfLife/UserControls/GameCell.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Conways_GameOfLife.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid x:Name="CellGrid" Background="White">
-        <Border BorderBrush="Black" BorderThickness="1"></Border>
+    <Grid x:Name="CellGrid" Cursor="Hand" MouseDown="CellGrid_MouseDown">
+        <Border x:Name="CellBorder" BorderThickness="0.5"></Border>
     </Grid>
 </UserControl>
