--- a/Conways_GameOfLife/MainWindow.xaml
+++ b/Conways_GameOfLife/MainWindow.xaml
@@ -15,9 +15,20 @@
                 <Button x:Name="StopButton" Click="StopButton_Click">Stop</Button>
                 <Button x:Name="TestButton" Click="TestButton_Click">Test</Button>
                 <Button x:Name="ResetButton" Click="ResetButton_Click">Clear</Button>
-                <!--
-                <Button>Change Size</Button>
-                -->
+
+                <Separator></Separator>                
+                
+                <TextBox x:Name="Height_TextBox" Width="40"></TextBox>
+                <Label>X</Label>
+                <TextBox x:Name="Width_TextBox" Width="40"></TextBox>
+
+                <Button x:Name="ChangeSizeButton" Click="ChangeSizeButton_Click">Change Size</Button>
+                
+                <Separator></Separator>
+
+                <Button x:Name="SaveButton" Click="SaveButton_Click">Save</Button>
+                <Button x:Name="LoadButton" Click="LoadButton_Click">Load</Button>
+
             </ToolBar>
         </ToolBarTray>
         <!--#endregion-->
